updated content, removed links to store, and fixed layout bugs

--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: Quicksand;
+  background-color: #dddad2;
 }
 
 /* Fonts for Big letter headers */
